--- a/Home.html
+++ b/Home.html
@@ -8,19 +8,39 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dosis:wght@300&family=Karla:wght@200&family=Roboto+Condensed&family=Teko:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
+    <video autoplay muted loop id="myVideo">
+        <source src="videos/video.mp4" type="video/mp4">
+    </video>
+    
+    <div class="top">
+        <p>Free Shipping on Orders over $75. Call us 123-456-7890</p>
+        <input type="text" id="search-1" placeholder="Search">
+        <button type="submit"><img src="images/search.png" alt=""></button>
+        <div class="side-1">
+        <img src="Images/profile-user.png" alt="User">
+        <p>Log in | Register</p>
+        <img src="Images/shopping-bag.png" alt="Shopping bag">
+        </div>
+    </div>
     <nav>
         <ul>
-            <li>
+            <li><a href="">
                 HOME
+            </a>
             </li>
             <li>
+                <a href="">
                 PRODUCT
+            </a>
             </li>
-            <li>
+            <li><a href="">
                 ABOUT
+            </a>
             </li>
             <li>
+                <a href="">
                 CONTACT US
+            </a>
             </li>
         </ul>
     </nav>
