--- a/Home.html
+++ b/Home.html
@@ -24,26 +24,44 @@
     </div>
     <nav>
         <ul>
-            <li><a href="">
+            <div class="logo">
+                <img src="images/logo.png" alt="Logo">
+                <p>Thread<br> Processors</p>
+            </div>
+            <li><a href="Home.html">
                 HOME
             </a>
             </li>
             <li>
-                <a href="">
+                <a href="Product.html">
                 PRODUCT
             </a>
             </li>
-            <li><a href="">
+            <li><a href="About.html">
                 ABOUT
             </a>
             </li>
             <li>
-                <a href="">
+                <a href="Contact.html">
                 CONTACT US
             </a>
             </li>
         </ul>
     </nav>
-    
+    <div class="container-1">
+        <h1>
+            Shop our Premium Processors
+        </h1>
+        <p>
+            Get your first Processor, At 30% OFF & Zero Home Delivery Fees.
+        </p>
+        <h3>
+            *T&C APPLY
+        </h3>
+        <button class="btn1">
+            <span class="span-1"></span>
+            SHOP NOW
+        </button>
+    </div>
 </body>
 </html>
