--- a/Home.html
+++ b/Home.html
@@ -62,6 +62,31 @@
             <span class="span-1"></span>
             SHOP NOW
         </button>
+        <div class="log">
+            <i class="fa-solid fa-bolt fa-2xl" style="color: #ffffff;"></i>
+            <p>Fast as Lightning</p>
+        </div>
+        <div class="log-2">
+            <i class="fa-solid fa-earth-americas fa-2xl" style="color: #ffffff;"></i>
+            <p>Capable of doing<br> Faster Multitasking</p>
+        </div>
+        <div class="log-3">
+            <i class="fa-solid fa-business-time fa-2xl" style="color: #ffffff;"></i>
+            <p>Time Management &<br>Newer Technology</p>
+        </div>
+    </div>
+    <div class="container-2">
+        <div class="box">
+            <h2>Shop By Category</h2>
+        </div>
+        <div class="box-1">
+            <img src="Images/intel xeon-1.webp" alt="">
+            <h1>Intel Xeon</h1>
+            <p>Explore the Latest fastest<br> Processors ever made by<br> Intel</p>
+            <button type="submit"><a class="xeon" href="xeon.html">Xeon Processors</a> </button>
+        </div>
     </div>
 </body>
+<script src="js/main.js"></script>
+<script src="https://kit.fontawesome.com/2133e5dd52.js" crossorigin="anonymous"></script>
 </html>
