--- a/Product.html
+++ b/Product.html
@@ -35,9 +35,71 @@
             </li>
         </ul>
     </nav>
+    <div class="content-width">
+        <div class="slideshow">
+          <!-- Slideshow Items -->
+          <div class="slideshow-items">
+            <div class="item">
+              <div class="item-image-container">
+                <img class="item-image" src="images/ryzen threadripper.jpg" />
+              </div>
+              <!-- Staggered Header Elements -->
+              <div class="item-header">
+                <span class="vertical-part"><b>Ryzen Threadripper</b></span>
+              </div>
+              <!-- Staggered Description Elements -->
+              <div class="item-description">
+                <span class="vertical-part">
+                  <b>AMD Ryzen™ Threadripper™ PRO 5000 WX-Series</b>
+                </span>
+                    
+              </div>
+            </div>
+            <div class="item">
+              <div class="item-image-container">
+                <img class="item-image" src="images/intel.png" />
+              </div>
+              <!-- Staggered Header Elements -->
+              <div class="item-header">
+                <span class="vertical-part">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Intel i9</b></span>
+              </div>
+              <!-- Staggered Description Elements -->
+              <div class="item-description">
+                <span class="vertical-part">
+                  <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    Intel i9 13<sup>th</sup>Gen</b>
+                </span>
+                
+              </div>
+            </div>
+            <div class="item">
+              <div class="item-image-container">
+                <img class="item-image" src="images/D5G7mp.jpg" />
+              </div>
+              <!-- Staggered Header Elements -->
+              <div class="item-header">
+                <span class="vertical-part"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NVIDIA</b></span>
+              </div>
+              <!-- Staggered Description Elements -->
+              <div class="item-description">
+                <span class="vertical-part">
+                  <b>NVIDIA GTX 4080 Graphic Card with 16GB DDR6X MEMORY</b>
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="controls">
+            <ul>
+              <li class="control" data-index="0"></li>
+              <li class="control" data-index="1"></li>
+              <li class="control" data-index="2"></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     <div class="side-bar"></div>
     <div class="intel"></div>
 </body>
-<script src="js/main.js"></script>
+<script src="js/test.js"></script>
 <script src="https://kit.fontawesome.com/2133e5dd52.js" crossorigin="anonymous"></script>
 </html>
