--- a/Home.html
+++ b/Home.html
@@ -14,7 +14,7 @@
     </video>
     
     <div class="top">
-        <p>Free Shipping on Orders over $75. Call us 123-456-7890</p>
+        <p>&nbsp;&nbsp;&nbsp;Free Shipping on Orders over $75. Call us 123-456-7890</p>
         <input type="text" id="search-1" placeholder="Search">
         <button type="submit"><img src="images/search.png" alt=""></button>
         <div class="side-1">
