--- a/Product.html
+++ b/Product.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="Images/logo.png">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dosis:wght@300&family=Karla:wght@200&family=Roboto+Condensed&family=Teko:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dosis:wght@300&family=Josefin+Sans:wght@200&family=Karla:wght@200&family=Roboto+Condensed&family=Teko:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     
@@ -162,11 +163,45 @@
                     
                   </div>
             </div>
+            <div class="buttons-for-sidebar">
+                <button type="reset">Clear filters</button>
+                <button type="submit">Submit</button>
+        </div>
       </div>
     <div class="intel">
-        <img src="images/i5.jpeg" alt="">
-        <img src="images/i7.jpeg" alt="">
-        <img src="images/Intel i9.jpg" alt="">
+        <div class="intel-1">
+            <h1>Intel i5 Processor 14600KF</h1>
+            <img src="images/i5.jpeg" alt="">
+            <p>24MB Cache</p>
+            <p>Glock Speed upto 5.30GHz</p>
+            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$253</h1>
+            <h2>$459</h2>
+            <button type="submit">Add To Cart</button>
+            <button type="submit">Buy Now</button>
+            <a href="https://www.intel.com/content/www/us/en/products/sku/232173/intel-core-i513420h-processor-12m-cache-up-to-4-60-ghz/specifications.html">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #000f7f;"></i></a>
+        </div>
+        <div class="intel-2">
+            <h1>Intel i7 Processor 14700K</h1>
+            <img src="images/i7.jpeg" alt="">
+            <p>33MB Cache</p>
+            <p>Max Memory Bandwidth : 89.6GB/s</p>
+            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$595</h1>
+            <h2>$454</h2>
+            <button type="submit">Add To Cart</button>
+            <button type="submit">Buy Now</button>
+            <a href="https://www.intel.com/content/www/us/en/products/sku/236783/intel-core-i7-processor-14700k-33m-cache-up-to-5-60-ghz/specifications.html">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
+        </div>
+        <div class="intel-3">
+            <h1>Intel i9 Processor 14900K</h1>
+            <img src="images/Intel i9.jpg" alt="">
+            <p>36 MB Cache</p>
+            <p>Processor Turbo Power : 253 W</p>
+            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$570</h1>
+            <h2>$599</h2>
+            <button type="submit">Add To Cart</button>
+            <button type="submit">Buy Now</button>
+            <a href="https://www.intel.com/content/www/us/en/products/sku/236773/intel-core-i9-processor-14900k-36m-cache-up-to-6-00-ghz/specifications.html">Learn more<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
+        </div>
     </div>
     <script src="js/main.js"></script>
     <script src="https://kit.fontawesome.com/2133e5dd52.js" crossorigin="anonymous"></script>
