--- a/Home.html
+++ b/Home.html
@@ -61,7 +61,7 @@
         </h3>
         <button class="btn1">
             <span class="span-1"></span>
-            SHOP NOW
+            <a href="Product.html">SHOP NOW</a>
         </button>
         <div class="log">
             <i class="fa-solid fa-bolt fa-2xl" style="color: #ffffff;"></i>
