--- a/Product.html
+++ b/Product.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME | THREAD PROCESSORS </title>
+    <title>PRODUCTS | THREAD PROCESSORS </title>
     <link rel="icon" href="Images/logo.png">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dosis:wght@300&family=Karla:wght@200&family=Roboto+Condensed&family=Teko:wght@300&display=swap" rel="stylesheet">
@@ -202,6 +202,140 @@
             <button type="submit">Buy Now</button>
             <a href="https://www.intel.com/content/www/us/en/products/sku/236773/intel-core-i9-processor-14900k-36m-cache-up-to-6-00-ghz/specifications.html">Learn more<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
         </div>
+        <div class="intel-4">
+            <h1>Intel i7 Processor 1370P</h1>
+            <img src="images/i7.jpeg" alt="">
+            <p>24MB Cache</p>
+            <p>Total Threads : 20</p>
+            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$430</h1>
+            <h2>$499</h2>
+            <button type="submit">Add To Cart</button>
+            <button type="submit">Buy Now</button>
+            <a href="https://www.intel.com/content/www/us/en/products/sku/232146/intel-core-i71370p-processor-24m-cache-up-to-5-20-ghz/specifications.html">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
+        </div>
+        <div class="intel-5">
+            <h1>Intel i5 Processor 1155G7</h1>
+            <img src="images/i5.jpeg" alt="">
+            <p>Max Turbo Speed : 4.50GHz</p>
+            <p>Bus Speed : 4 GT/s</p>
+            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$299</h1>
+            <h2>$350</h2>
+            <button type="submit">Add To Cart</button>
+            <button type="submit">Buy Now</button>
+            <a href="https://www.intel.com/content/www/us/en/products/sku/217185/intel-core-i51155g7-processor-8m-cache-up-to-4-50-ghz/specifications.html">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
+        </div>
+        <div class="intel-6">
+            <h1>Intel i3 Processor 1320PE</h1>
+            <img src="images/i3.png" alt="">
+            <p>Lithography : Intel 7</p>
+            <p>Total Cores : 8</p>
+            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$279</h1>
+            <h2>$340</h2>
+            <button type="submit">Add To Cart</button>
+            <button type="submit">Buy Now</button>
+            <a href="https://www.intel.com/content/www/us/en/products/sku/232169/intel-core-i31320pe-processor-12m-cache-up-to-4-50-ghz/specifications.html">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
+        </div>
+        <div class="intel-7">
+            <h1>Intel Xeon Platinum 8452Y</h1>
+            <img src="images/intel xeon-1.webp" alt="">
+            <p>For Server, Enterprise</p>
+            <p>Total Cores : 72</p>
+            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$3899</h1>
+            <h2>$4299</h2>
+            <button type="submit">Add To Cart</button>
+            <button type="submit">Buy Now</button>
+            <a href="https://www.intel.com/content/www/us/en/products/sku/231761/intel-xeon-platinum-8452y-processor-67-5m-cache-2-00-ghz/specifications.html">Learn More &nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
+        </div>
+        <div class="intel-7">
+            <h1>Intel Xeon Gold 6423N</h1>
+            <img src="images/xeon-gold.png" alt="">
+            <p>TDP : 195W</p>
+            <p>Total Cores : 28</p>
+            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$2099</h1>
+            <h2>$2599</h2>
+            <button type="submit">Add To Cart</button>
+            <button type="submit">Buy Now</button>
+            <a href="https://www.intel.com/content/www/us/en/products/sku/236591/intel-xeon-gold-6423n-processor-52-5m-cache-2-00-ghz/specifications.html">Learn More &nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
+        </div>
+        <div class="intel-7">
+            <h1>Intel Xeon Silver 4410Y</h1>
+            <img src="images/xeon-silver.jpeg" alt="">
+            <p>Max Turbo Frequency : 3.90GHz</p>
+            <p>Total Threads : 24</p>
+            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$549</h1>
+            <h2>$699</h2>
+            <button type="submit">Add To Cart</button>
+            <button type="submit">Buy Now</button>
+            <a href="https://www.intel.com/content/www/us/en/products/sku/232376/intel-xeon-silver-4410y-processor-30m-cache-2-00-ghz/specifications.html">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
+        </div>
+        <div class="intel-8">
+            <h1>Ryzen 9 5950X</h1>
+            <img src="images/Ryzen 9.jpg" alt="">
+            <p>Total Cores : 16</p>
+            <p>Maximum Boost Clock : 4.9GHz</p>
+            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$699</h1>
+            <h2>$799</h2>
+            <button type="submit">Add To Cart</button>
+            <button type="submit">Buy Now</button>
+            <a href="https://www.amd.com/en/products/cpu/amd-ryzen-9-5950x">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
+        </div>
+        <div class="intel-8">
+            <h1>Ryzen 7 5800X</h1>
+            <img src="images/amd_ryzen_7_logo.webp" alt="">
+            <p>Total Cores : 8</p>
+            <p>TDP : 105W</p>
+            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$399</h1>
+            <h2>$299</h2>
+            <button type="submit">Add To Cart</button>
+            <button type="submit">Buy Now</button>
+            <a href="https://www.amd.com/en/products/cpu/amd-ryzen-7-5800x">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
+        </div>
+        <div class="intel-8">
+            <h1>Ryzen 5 5500</h1>
+            <img src="images/ryzen-5.gif" alt="">
+            <p>Total Cores : 6</p>
+            <p>Unlocked for Overclocking</p>
+            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$109</h1>
+            <h2>$249</h2>
+            <button type="submit">Add To Cart</button>
+            <button type="submit">Buy Now</button>
+            <a href="https://www.amd.com/en/products/cpu/amd-ryzen-7-5800x">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
+        </div>
+    </div>
+    <div class="ryzen-pro">
+        <h1>AMD RYZEN THREADRIPPER PRO Series</h1>
+        <img src="images/q.png" alt="">
+        <ul>
+            <li> Made for Extensive Task handling.</li>
+            <li>Made with a purpose to maintain web servers </li>
+            <li>Comes with PCI Express® Version : 5.0</li>
+            <li>Capable of doing 5,200,000,000 Transfers/s</li>
+        </ul>
+    </div>
+    <div class="ryzen">
+        <div class="intel-9">
+            <h1>Ryzen Threadripper PRO 7995 WX</h1>
+            <img src="images/thread-ripper.png" alt="">
+            <p>Number of Threads : 192</p>
+            <p>TDP : 350W</p>
+            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$4799</h1>
+            <h2>$4999</h2>
+            <button type="submit">Add To Cart</button>
+            <button type="submit">Buy Now</button>
+            <a href="https://www.amd.com/en/products/cpu/amd-ryzen-threadripper-pro-7995wx">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
+        </div>
+    </div>
+    <div class="nvidia">
+        <h1>NVIDIA GRAPHIC SERIES</h1>
+        <img src="images/nvi.gif" alt="">
+        <ul>
+            <li>Take your gaming experience to a whole new level with all new RTX 4090 </li>
+            <li>Experience lightning-fast frame rates and smooth gameplay with 16GB of ultra-fast <br>GDDR6X memory</li>
+            <li>Get Real with RTX Ray Tracing</li>
+            <li>Maximum CUDA Cores of 16384</li>
+            <li>Comes With Resizeable Bar Technology</li>
+            <li>Turning on G-Sync can provide refresh rate upto 360 Hz</li>
+        </ul>
     </div>
     <script src="js/main.js"></script>
     <script src="https://kit.fontawesome.com/2133e5dd52.js" crossorigin="anonymous"></script>
