--- a/Product.html
+++ b/Product.html
@@ -324,6 +324,39 @@
             <button type="submit">Buy Now</button>
             <a href="https://www.amd.com/en/products/cpu/amd-ryzen-threadripper-pro-7995wx">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
         </div>
+        <div class="intel-10">
+            <h1>Ryzen Threadripper PRO 7980X</h1>
+            <img src="images/thread-ripper-2.jpeg" alt="">
+            <p>Number of Threads : 128</p>
+            <p>Maximum Boost Clock : 5.1 GHz</p>
+            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$1100</h1>
+            <h2>$1399</h2>
+            <button type="submit">Add To Cart</button>
+            <button type="submit">Buy Now</button>
+            <a href="https://www.amd.com/en/products/cpu/amd-ryzen-threadripper-7980x">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
+        </div>
+        <div class="intel-10">
+            <h1>Ryzen Threadripper PRO 3970X</h1>
+            <img src="images/thread-ripper-3.jpeg" alt="">
+            <p>Number of Cores : 32</p>
+            <p>L3 Cache : 128MB</p>
+            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$2849</h1>
+            <h2>$2999</h2>
+            <button type="submit">Add To Cart</button>
+            <button type="submit">Buy Now</button>
+            <a href="https://www.amd.com/en/products/cpu/amd-ryzen-threadripper-7980x">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
+        </div>
+        <div class="intel-10">
+            <h1>Ryzen Threadripper PRO 5995WX</h1>
+            <img src="images/thread-ripper-4.jpeg" alt="">
+            <p>Transfer Speed upto 3200MT/s</p>
+            <p>Maximum Boost Clock : 4.5 GHz</p>
+            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$1949</h1>
+            <h2>$2199</h2>
+            <button type="submit">Add To Cart</button>
+            <button type="submit">Buy Now</button>
+            <a href="https://www.amd.com/en/products/cpu/amd-ryzen-threadripper-7980x">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
+        </div>
     </div>
     <div class="nvidia">
         <h1>NVIDIA GRAPHIC SERIES</h1>
@@ -337,6 +370,48 @@
             <li>Turning on G-Sync can provide refresh rate upto 360 Hz</li>
         </ul>
     </div>
+    <div class="footer-2">
+    <footer>
+        <img src="images/logo.png" alt="Thread Processors">
+        <h1>Thread<br> Processors</h1>
+        <div class="tab">
+            <h1>Shop</h1>
+            <div class="home-1">
+                <a href="Home.html">Home</a>
+                <a href="Product.html">Our Products</a>
+                <a href="Ryzen.html">Ryzen</a>
+                <a href="Intel.html">Intel</a>
+            </div>
+            <h1>Company</h1>
+            <div class="company-1">
+                <a href="About.html">About</a>
+                <a href="Reviews.html">Reviews</a>
+                <a href="FAQ.html">FAQ</a>
+            </div>
+            <h1>Contact Us</h1>
+            <div class="contact-1">
+                <p>contact@threadProcessor.corp</p>
+                <p>+1-(123)-456-7890</p>
+                <p>111, tupac shakur road, Toronto</p>
+            </div>
+            <h1>Follow Us</h1>
+            <div class="follow-1">
+                <a href="#">X (aka) Twitter</a>
+                <a href="#">Facebook</a>
+                <a href="#">Instagram</a>
+                <a href="#">Github</a>
+            </div>
+        </div>
+        <div class="tab-2">
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Shipping Policy</a>
+            <a href="#">Refund Policy</a>
+            <a href="#">Cookie Policy</a>
+        </div>
+        <p>© 2023 by Thread Processors Corp.</p>
+    </footer>
+</div>
     <script src="js/main.js"></script>
     <script src="https://kit.fontawesome.com/2133e5dd52.js" crossorigin="anonymous"></script>
 </body>
