--- a/About.html
+++ b/About.html
@@ -58,7 +58,7 @@
     <section class="section-2">
         <img src="images/pexels-aleksandar-pasaric-1694000.jpg" alt="" style="height: 1000px;width: 1900px;">
         <div class="video-3">
-            <video src="videos/ad_video.mp4" autoplay muted loop></video>
+            <video src="videos/1129.mp4" autoplay muted loop></video>
         </div>
         <div class="head-section">
         <h2>Our Company</h2>
@@ -79,7 +79,7 @@
     </div>
     </section>
     <section class="section-4">
-        <img src="images/—Pngtree—digital processor technology circuit board_2499705 (1).jpg" alt="">
+        <img src="images/—Pngtree—digital processor technology circuit board_2499705.jpg" alt="">
         <div class="vignette"></div>
         <h1>How are our Processors are manufactured, Processed and Quality Assured?</h1>
         <video class="video-4" src="videos/sand to silicon_intel.mp4" muted autoplay loop>
