--- a/Home.html
+++ b/Home.html
@@ -49,7 +49,7 @@
             </li>
         </ul>
     </nav>
-    <div class="container-1">
+    <div class="container-1 animated">
         <h1>
             Shop our Premium Processors
         </h1>
@@ -76,7 +76,7 @@
             <p>Time Management &<br>Newer Technology</p>
         </div>
     </div>
-    <div class="container-2">
+    <div class="container-2 animated">
         <div class="box">
             <h2>SHOP BY CATEGORY</h2>
         </div>
@@ -99,7 +99,7 @@
             <button type="submit"><a class="xeon" href="xeon.html">Ryzen 9 Series <i class="fa-solid fa-up-right-from-square fa-2xs" style="color: #000000;"></i></a></button>
         </div>
     </div>
-    <div class="container-3">
+    <div class="container-3 ">
         <h1 class="heading-3">TOP SELLS</h1>
         <button type="submit"></button>
         <section class="product"> 
