--- a/Product.html
+++ b/Product.html
@@ -169,7 +169,7 @@
         </div>
       </div>
     <div class="intel">
-        <div class="intel-1">
+        <div class="intel-1 animated">
             <h1>Intel i5 Processor 14600KF</h1>
             <img src="images/i5.jpeg" alt="">
             <p>24MB Cache</p>
@@ -180,7 +180,7 @@
             <button type="submit">Buy Now</button>
             <a href="https://www.intel.com/content/www/us/en/products/sku/232173/intel-core-i513420h-processor-12m-cache-up-to-4-60-ghz/specifications.html">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #000f7f;"></i></a>
         </div>
-        <div class="intel-2">
+        <div class="intel-2 animated">
             <h1>Intel i7 Processor 14700K</h1>
             <img src="images/i7.jpeg" alt="">
             <p>33MB Cache</p>
@@ -191,7 +191,7 @@
             <button type="submit">Buy Now</button>
             <a href="https://www.intel.com/content/www/us/en/products/sku/236783/intel-core-i7-processor-14700k-33m-cache-up-to-5-60-ghz/specifications.html">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
         </div>
-        <div class="intel-3">
+        <div class="intel-3 animated">
             <h1>Intel i9 Processor 14900K</h1>
             <img src="images/Intel i9.jpg" alt="">
             <p>36 MB Cache</p>
@@ -202,7 +202,7 @@
             <button type="submit">Buy Now</button>
             <a href="https://www.intel.com/content/www/us/en/products/sku/236773/intel-core-i9-processor-14900k-36m-cache-up-to-6-00-ghz/specifications.html">Learn more<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
         </div>
-        <div class="intel-4">
+        <div class="intel-4 animated">
             <h1>Intel i7 Processor 1370P</h1>
             <img src="images/i7.jpeg" alt="">
             <p>24MB Cache</p>
@@ -213,7 +213,7 @@
             <button type="submit">Buy Now</button>
             <a href="https://www.intel.com/content/www/us/en/products/sku/232146/intel-core-i71370p-processor-24m-cache-up-to-5-20-ghz/specifications.html">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
         </div>
-        <div class="intel-5">
+        <div class="intel-5 animated">
             <h1>Intel i5 Processor 1155G7</h1>
             <img src="images/i5.jpeg" alt="">
             <p>Max Turbo Speed : 4.50GHz</p>
@@ -224,7 +224,7 @@
             <button type="submit">Buy Now</button>
             <a href="https://www.intel.com/content/www/us/en/products/sku/217185/intel-core-i51155g7-processor-8m-cache-up-to-4-50-ghz/specifications.html">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
         </div>
-        <div class="intel-6">
+        <div class="intel-6 animated">
             <h1>Intel i3 Processor 1320PE</h1>
             <img src="images/i3.png" alt="">
             <p>Lithography : Intel 7</p>
@@ -235,7 +235,7 @@
             <button type="submit">Buy Now</button>
             <a href="https://www.intel.com/content/www/us/en/products/sku/232169/intel-core-i31320pe-processor-12m-cache-up-to-4-50-ghz/specifications.html">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
         </div>
-        <div class="intel-7">
+        <div class="intel-7 animated">
             <h1>Intel Xeon Platinum 8452Y</h1>
             <img src="images/intel xeon-1.webp" alt="">
             <p>For Server, Enterprise</p>
@@ -246,7 +246,7 @@
             <button type="submit">Buy Now</button>
             <a href="https://www.intel.com/content/www/us/en/products/sku/231761/intel-xeon-platinum-8452y-processor-67-5m-cache-2-00-ghz/specifications.html">Learn More &nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
         </div>
-        <div class="intel-7">
+        <div class="intel-7 animated">
             <h1>Intel Xeon Gold 6423N</h1>
             <img src="images/xeon-gold.png" alt="">
             <p>TDP : 195W</p>
@@ -257,7 +257,7 @@
             <button type="submit">Buy Now</button>
             <a href="https://www.intel.com/content/www/us/en/products/sku/236591/intel-xeon-gold-6423n-processor-52-5m-cache-2-00-ghz/specifications.html">Learn More &nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
         </div>
-        <div class="intel-7">
+        <div class="intel-7 animated">
             <h1>Intel Xeon Silver 4410Y</h1>
             <img src="images/xeon-silver.jpeg" alt="">
             <p>Max Turbo Frequency : 3.90GHz</p>
@@ -268,7 +268,7 @@
             <button type="submit">Buy Now</button>
             <a href="https://www.intel.com/content/www/us/en/products/sku/232376/intel-xeon-silver-4410y-processor-30m-cache-2-00-ghz/specifications.html">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
         </div>
-        <div class="intel-8">
+        <div class="intel-8 animated">
             <h1>Ryzen 9 5950X</h1>
             <img src="images/Ryzen 9.jpg" alt="">
             <p>Total Cores : 16</p>
@@ -279,7 +279,7 @@
             <button type="submit">Buy Now</button>
             <a href="https://www.amd.com/en/products/cpu/amd-ryzen-9-5950x">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
         </div>
-        <div class="intel-8">
+        <div class="intel-8 animated">
             <h1>Ryzen 7 5800X</h1>
             <img src="images/amd_ryzen_7_logo.webp" alt="">
             <p>Total Cores : 8</p>
@@ -290,7 +290,7 @@
             <button type="submit">Buy Now</button>
             <a href="https://www.amd.com/en/products/cpu/amd-ryzen-7-5800x">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
         </div>
-        <div class="intel-8">
+        <div class="intel-8 animated">
             <h1>Ryzen 5 5500</h1>
             <img src="images/ryzen-5.gif" alt="">
             <p>Total Cores : 6</p>
@@ -304,7 +304,7 @@
     </div>
     <div class="ryzen-pro">
         <h1>AMD RYZEN THREADRIPPER PRO Series</h1>
-        <img src="images/q.png" alt="">
+        <img src="images/q.png" alt="" class="animated">
         <ul>
             <li> Made for Extensive Task handling.</li>
             <li>Made with a purpose to maintain web servers </li>
@@ -313,7 +313,7 @@
         </ul>
     </div>
     <div class="ryzen">
-        <div class="intel-9">
+        <div class="intel-9 animated">
             <h1>Ryzen Threadripper PRO 7995 WX</h1>
             <img src="images/thread-ripper.png" alt="">
             <p>Number of Threads : 192</p>
@@ -324,7 +324,7 @@
             <button type="submit">Buy Now</button>
             <a href="https://www.amd.com/en/products/cpu/amd-ryzen-threadripper-pro-7995wx">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
         </div>
-        <div class="intel-10">
+        <div class="intel-10 animated">
             <h1>Ryzen Threadripper PRO 7980X</h1>
             <img src="images/thread-ripper-2.jpeg" alt="">
             <p>Number of Threads : 128</p>
@@ -335,7 +335,7 @@
             <button type="submit">Buy Now</button>
             <a href="https://www.amd.com/en/products/cpu/amd-ryzen-threadripper-7980x">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
         </div>
-        <div class="intel-10">
+        <div class="intel-10 animated">
             <h1>Ryzen Threadripper PRO 3970X</h1>
             <img src="images/thread-ripper-3.jpeg" alt="">
             <p>Number of Cores : 32</p>
@@ -346,7 +346,7 @@
             <button type="submit">Buy Now</button>
             <a href="https://www.amd.com/en/products/cpu/amd-ryzen-threadripper-7980x">Learn More&nbsp;&nbsp;<i class="fa-solid fa-arrow-up-right-from-square fa-bounce" style="color: #09008c;"></i></a>
         </div>
-        <div class="intel-10">
+        <div class="intel-10 animated">
             <h1>Ryzen Threadripper PRO 5995WX</h1>
             <img src="images/thread-ripper-4.jpeg" alt="">
             <p>Transfer Speed upto 3200MT/s</p>
@@ -360,7 +360,7 @@
     </div>
     <div class="nvidia">
         <h1>NVIDIA GRAPHIC SERIES</h1>
-        <img src="images/nvi.gif" alt="">
+        <img src="images/nvi.gif" alt="" class="animated">
         <ul>
             <li>Take your gaming experience to a whole new level with all new RTX 4090 </li>
             <li>Experience lightning-fast frame rates and smooth gameplay with 16GB of ultra-fast <br>GDDR6X memory</li>
