--- a/About.html
+++ b/About.html
@@ -155,9 +155,11 @@
                 <hr />
             </div>
         </div>
-        
-<!-- 
-    <div class="footer-3">
+        <div class="support-us">
+            <h1>Support Us</h1>
+        </div>
+
+    <div class="footer-4">
         <footer>
             <img src="images/logo.png" alt="Thread Processors">
             <h1>Thread<br> Processors</h1>
@@ -198,7 +200,7 @@
             </div>
             <p>© 2023 by Thread Processors Corp.</p>
         </footer>
-    </div> -->
+    </div>
         <script src="js/main.js"></script>
         <script src="https://kit.fontawesome.com/2133e5dd52.js" crossorigin="anonymous"></script>
     </body>
