--- a/About.html
+++ b/About.html
@@ -157,6 +157,9 @@
         </div>
         <div class="support-us">
             <h1>Support Us</h1>
+            <img src="images/N3Q7YrK-dark-space-wallpaper.jpg" alt="">
+            <div class="vignette-4">
+            </div>
         </div>
 
     <div class="footer-4">
