--- a/About.html
+++ b/About.html
@@ -160,6 +160,10 @@
             <img src="images/N3Q7YrK-dark-space-wallpaper.jpg" alt="">
             <div class="vignette-4">
             </div>
+            <h2>Our company is supporting and funding <br>Jeff Bezo's Atomic Clock Project </h2>
+            <a href="https://www.blueorigin.com/">
+                <button type="button">BLUE ORIGIN</button>
+              </a>
         </div>
 
     <div class="footer-4">
