--- a/Product.html
+++ b/Product.html
@@ -326,7 +326,7 @@
         </div>
         <div class="intel-10 animated">
             <h1>Ryzen Threadripper PRO 7980X</h1>
-            <img src="images/thread-ripper-2.jpeg" alt="">
+            <img src="images/thread-ripper-2.png" alt="">
             <p>Number of Threads : 128</p>
             <p>Maximum Boost Clock : 5.1 GHz</p>
             <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$1100</h1>
@@ -337,7 +337,7 @@
         </div>
         <div class="intel-10 animated">
             <h1>Ryzen Threadripper PRO 3970X</h1>
-            <img src="images/thread-ripper-3.jpeg" alt="">
+            <img src="images/thread-ripper-3.png" alt="">
             <p>Number of Cores : 32</p>
             <p>L3 Cache : 128MB</p>
             <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$2849</h1>
@@ -348,7 +348,7 @@
         </div>
         <div class="intel-10 animated">
             <h1>Ryzen Threadripper PRO 5995WX</h1>
-            <img src="images/thread-ripper-4.jpeg" alt="">
+            <img src="images/thread-ripper-4.png" alt="">
             <p>Transfer Speed upto 3200MT/s</p>
             <p>Maximum Boost Clock : 4.5 GHz</p>
             <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$1949</h1>
