twenty second commit

--- a/About.html
+++ b/About.html
@@ -79,7 +79,7 @@
     </div>
     </section>
     <section class="section-4 animated">
-        <img src="images/—Pngtree—digital processor technology circuit board_2499705.JPG" alt="">
+        <img src="images/—Pngtree—digital processor technology circuit board_2499705 (1).JPG" alt="">
         <div class="vignette"></div>
         <h1>How are our Processors are manufactured, Processed and Quality Assured?</h1>
         <video class="video-4 animated" src="videos/ad_video.mp4" muted autoplay loop>
