--- a/Home.html
+++ b/Home.html
@@ -26,7 +26,7 @@
     <nav>
         <ul>
             <div class="logo">
-                <img src="images/logo.png" alt="Logo">
+                <img src="Images/logo.png" alt="Logo">
                 <p>Thread<br> Processors</p>
             </div>
             <li><a href="Home.html">
