twenty second commit

--- a/Home.html
+++ b/Home.html
@@ -109,7 +109,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag">28% off</span>
-                        <img src="images/Intel i9.jpg" class="product-thumb" alt="">
+                        <img src="Images/Intel i9.jpg" class="product-thumb" alt="">
                         <button class="card-btn">add to wishlist</button>
                     </div>
                     <div class="product-info">
@@ -122,7 +122,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag">17.6% off</span>
-                        <img src="images/intel xeon-1.webp" class="product-thumb" alt="">
+                        <img src="Images/intel xeon-1.webp" class="product-thumb" alt="">
                         <button class="card-btn">add to wishlist</button>
                     </div>
                     <div class="product-info">
@@ -134,7 +134,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag">15% off</span>
-                        <img src="images/i7.jpeg" class="product-thumb" alt="">
+                        <img src="Images/i7.jpeg" class="product-thumb" alt="">
                         <button class="card-btn">add to wishlist</button>
                     </div>
                     <div class="product-info">
@@ -147,7 +147,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag">20% off</span>
-                        <img src="images/i5.jpeg" class="product-thumb" alt="">
+                        <img src="Images/i5.jpeg" class="product-thumb" alt="">
                         <button class="card-btn">add to wishlist</button>
                     </div>
                     <div class="product-info">
@@ -160,7 +160,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag">9% off</span>
-                        <img src="images/Ryzen 9.jpg" class="product-thumb" alt="">
+                        <img src="Images/Ryzen 9.jpg" class="product-thumb" alt="">
                         <button class="card-btn">add to wishlist</button>
                     </div>
                     <div class="product-info">
@@ -173,7 +173,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag">15% off</span>
-                        <img src="images/ryzen threadripper.jpg" class="product-thumb" alt="">
+                        <img src="Images/ryzen threadripper.jpg" class="product-thumb" alt="">
                         <button class="card-btn">add to wishlist</button>
                     </div>
                     <div class="product-info">
@@ -188,7 +188,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag">9% off</span>
-                        <img src="images/Nvidia rtx 4080.jpg" class="product-thumb" alt="">
+                        <img src="Images/Nvidia rtx 4080.jpg" class="product-thumb" alt="">
                         <button class="card-btn">add to wishlist</button>
                     </div>
                     <div class="product-info">
@@ -201,7 +201,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag">24% off</span>
-                        <img src="images/Intel iris xe.jpg" class="product-thumb" alt="">
+                        <img src="Images/Intel iris xe.jpg" class="product-thumb" alt="">
                         <button class="card-btn">add to wishlist</button>
                     </div>
                     <div class="product-info">
@@ -251,15 +251,15 @@
             BRANDS WE TRUST
         </h1>
         <div class="table-1">
-            <img src="images/intel.png" alt="">
-            <img src="images/ryzen.png" alt="">
-            <img class="micron" src="images/micron (2).png" alt="">
+            <img src="Images/intel.png" alt="">
+            <img src="Images/ryzen.png" alt="">
+            <img class="micron" src="Images/micron (2).png" alt="">
             <div class="nvidia">
-            <img  src="images/nvidia.png" alt="">
+            <img  src="Images/nvidia.png" alt="">
         </div>
         </div>
         <footer>
-            <img src="images/logo.png" alt="Thread Processors">
+            <img src="Images/logo.png" alt="Thread Processors">
             <h1>Thread<br> Processors</h1>
             <div class="tab">
                 <h1>Shop</h1>
