twenty second commit

--- a/Product.html
+++ b/Product.html
@@ -14,7 +14,7 @@
     <nav class="nav2">
         <ul>
             <div class="logo">
-                <img src="images/logo.png" alt="Logo">
+                <img src="Images/logo.png" alt="Logo">
                 <p>Thread<br> Processors</p>
             </div>
             <li><a href="Home.html">
@@ -43,7 +43,7 @@
           <div class="slideshow-items">
                 <div class="item">
                     <div class="item-image-container">
-                        <img class="item-image" src="images/ryzen threadripper.jpg" />
+                        <img class="item-image" src="Images/ryzen threadripper.jpg" />
                     </div>
               <!-- Staggered Header Elements -->
                     <div class="item-header">
@@ -58,7 +58,7 @@
                 </div>
                 <div class="item">
                   <div class="item-image-container">
-                    <img class="item-image" src="images/intel.png" />
+                    <img class="item-image" src="Images/intel.png" />
                   </div>
               <!-- Staggered Header Elements -->
                     <div class="item-header">
@@ -74,7 +74,7 @@
                 </div>
                 <div class="item">
                     <div class="item-image-container">
-                        <img class="item-image" src="images/D5G7mp.jpg" />
+                        <img class="item-image" src="Images/D5G7mp.jpg" />
                     </div>
               <!-- Staggered Header Elements -->
                     <div class="item-header">
@@ -89,7 +89,7 @@
                 </div>
                 <div class="item">
                     <div class="item-image-container">
-                        <img class="item-image" src="images/crucial ram by micron.jpeg" />
+                        <img class="item-image" src="Images/crucial ram by micron.jpeg" />
                     </div>
                 <!-- Staggered Header Elements -->
                     <div class="item-header">
@@ -171,7 +171,7 @@
     <div class="intel">
         <div class="intel-1 animated">
             <h1>Intel i5 Processor 14600KF</h1>
-            <img src="images/i5.jpeg" alt="">
+            <img src="Images/i5.jpeg" alt="">
             <p>24MB Cache</p>
             <p>Glock Speed upto 5.30GHz</p>
             <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$253</h1>
@@ -182,7 +182,7 @@
         </div>
         <div class="intel-2 animated">
             <h1>Intel i7 Processor 14700K</h1>
-            <img src="images/i7.jpeg" alt="">
+            <img src="Images/i7.jpeg" alt="">
             <p>33MB Cache</p>
             <p>Max Memory Bandwidth : 89.6GB/s</p>
             <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$595</h1>
@@ -193,7 +193,7 @@
         </div>
         <div class="intel-3 animated">
             <h1>Intel i9 Processor 14900K</h1>
-            <img src="images/Intel i9.jpg" alt="">
+            <img src="Images/Intel i9.jpg" alt="">
             <p>36 MB Cache</p>
             <p>Processor Turbo Power : 253 W</p>
             <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$570</h1>
@@ -204,7 +204,7 @@
         </div>
         <div class="intel-4 animated">
             <h1>Intel i7 Processor 1370P</h1>
-            <img src="images/i7.jpeg" alt="">
+            <img src="Images/i7.jpeg" alt="">
             <p>24MB Cache</p>
             <p>Total Threads : 20</p>
             <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$430</h1>
@@ -215,7 +215,7 @@
         </div>
         <div class="intel-5 animated">
             <h1>Intel i5 Processor 1155G7</h1>
-            <img src="images/i5.jpeg" alt="">
+            <img src="Images/i5.jpeg" alt="">
             <p>Max Turbo Speed : 4.50GHz</p>
             <p>Bus Speed : 4 GT/s</p>
             <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$299</h1>
@@ -226,7 +226,7 @@
         </div>
         <div class="intel-6 animated">
             <h1>Intel i3 Processor 1320PE</h1>
-            <img src="images/i3.png" alt="">
+            <img src="Images/i3.png" alt="">
             <p>Lithography : Intel 7</p>
             <p>Total Cores : 8</p>
             <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$279</h1>
@@ -237,7 +237,7 @@
         </div>
         <div class="intel-7 animated">
             <h1>Intel Xeon Platinum 8452Y</h1>
-            <img src="images/intel xeon-1.webp" alt="">
+            <img src="Images/intel xeon-1.webp" alt="">
             <p>For Server, Enterprise</p>
             <p>Total Cores : 72</p>
             <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$3899</h1>
@@ -248,7 +248,7 @@
         </div>
         <div class="intel-7 animated">
             <h1>Intel Xeon Gold 6423N</h1>
-            <img src="images/xeon-gold.png" alt="">
+            <img src="Images/xeon-gold.png" alt="">
             <p>TDP : 195W</p>
             <p>Total Cores : 28</p>
             <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$2099</h1>
@@ -259,7 +259,7 @@
         </div>
         <div class="intel-7 animated">
             <h1>Intel Xeon Silver 4410Y</h1>
-            <img src="images/xeon-silver.jpeg" alt="">
+            <img src="Images/xeon-silver.jpeg" alt="">
             <p>Max Turbo Frequency : 3.90GHz</p>
             <p>Total Threads : 24</p>
             <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$549</h1>
@@ -270,7 +270,7 @@
         </div>
         <div class="intel-8 animated">
             <h1>Ryzen 9 5950X</h1>
-            <img src="images/Ryzen 9.jpg" alt="">
+            <img src="Images/Ryzen 9.jpg" alt="">
             <p>Total Cores : 16</p>
             <p>Maximum Boost Clock : 4.9GHz</p>
             <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$699</h1>
@@ -281,7 +281,7 @@
         </div>
         <div class="intel-8 animated">
             <h1>Ryzen 7 5800X</h1>
-            <img src="images/amd_ryzen_7_logo.webp" alt="">
+            <img src="Images/amd_ryzen_7_logo.webp" alt="">
             <p>Total Cores : 8</p>
             <p>TDP : 105W</p>
             <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$399</h1>
@@ -292,7 +292,7 @@
         </div>
         <div class="intel-8 animated">
             <h1>Ryzen 5 5500</h1>
-            <img src="images/ryzen-5.gif" alt="">
+            <img src="Images/ryzen-5.gif" alt="">
             <p>Total Cores : 6</p>
             <p>Unlocked for Overclocking</p>
             <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$109</h1>
@@ -304,7 +304,7 @@
     </div>
     <div class="ryzen-pro">
         <h1>AMD RYZEN THREADRIPPER PRO Series</h1>
-        <img src="images/q.png" alt="" class="animated">
+        <img src="Images/q.png" alt="" class="animated">
         <ul>
             <li> Made for Extensive Task handling.</li>
             <li>Made with a purpose to maintain web servers </li>
@@ -315,7 +315,7 @@
     <div class="ryzen">
         <div class="intel-9 animated">
             <h1>Ryzen Threadripper PRO 7995 WX</h1>
-            <img src="images/thread-ripper.png" alt="">
+            <img src="Images/thread-ripper.png" alt="">
             <p>Number of Threads : 192</p>
             <p>TDP : 350W</p>
             <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$4799</h1>
@@ -326,7 +326,7 @@
         </div>
         <div class="intel-10 animated">
             <h1>Ryzen Threadripper PRO 7980X</h1>
-            <img src="images/thread-ripper-2.png" alt="">
+            <img src="Images/thread-ripper-2.png" alt="">
             <p>Number of Threads : 128</p>
             <p>Maximum Boost Clock : 5.1 GHz</p>
             <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$1100</h1>
@@ -337,7 +337,7 @@
         </div>
         <div class="intel-10 animated">
             <h1>Ryzen Threadripper PRO 3970X</h1>
-            <img src="images/thread-ripper-3.png" alt="">
+            <img src="Images/thread-ripper-3.png" alt="">
             <p>Number of Cores : 32</p>
             <p>L3 Cache : 128MB</p>
             <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$2849</h1>
@@ -348,7 +348,7 @@
         </div>
         <div class="intel-10 animated">
             <h1>Ryzen Threadripper PRO 5995WX</h1>
-            <img src="images/thread-ripper-4.png" alt="">
+            <img src="Images/thread-ripper-4.png" alt="">
             <p>Transfer Speed upto 3200MT/s</p>
             <p>Maximum Boost Clock : 4.5 GHz</p>
             <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$1949</h1>
@@ -360,7 +360,7 @@
     </div>
     <div class="nvidia">
         <h1>NVIDIA GRAPHIC SERIES</h1>
-        <img src="images/nvi.gif" alt="" class="animated">
+        <img src="Images/nvi.gif" alt="" class="animated">
         <ul>
             <li>Take your gaming experience to a whole new level with all new RTX 4090 </li>
             <li>Experience lightning-fast frame rates and smooth gameplay with 16GB of ultra-fast <br>GDDR6X memory</li>
@@ -372,7 +372,7 @@
     </div>
     <div class="footer-2">
     <footer>
-        <img src="images/logo.png" alt="Thread Processors">
+        <img src="Images/logo.png" alt="Thread Processors">
         <h1>Thread<br> Processors</h1>
         <div class="tab">
             <h1>Shop</h1>
