--- a/Home.html
+++ b/Home.html
@@ -16,7 +16,7 @@
     <div class="top">
         <p>&nbsp;&nbsp;&nbsp;Free Shipping on Orders over $75. Call us 123-456-7890</p>
         <input type="text" id="search-1" placeholder="Search">
-        <button type="submit"><img src="images/search.png" alt=""></button>
+        <button type="submit"><img src="Images/search.png" alt=""></button>
         <div class="side-1">
         <img src="Images/profile-user.png" alt="User">
         <p>Log in | Register</p>
